@@ -1,4 +1,4 @@
 
-SUBDIRS=UML diagram ui
+SUBDIRS=UML diagram tree ui
 
 EXTRA_DIST=gmodeler.py
