@@ -1,0 +1,2 @@
+
+EXTRA_DIST = __init__.py namespace.py
