@@ -5,16 +5,13 @@
 #
 import UML
 import diagram
-import gc
 
 cnt=0
 def print_hash():
     global cnt
-    cnt = 0
-    UML.gc()
-    for k in UML.Element._hash.keys():
+    UML.update_model()
+    cnt = len(UML.Element._hash.keys())
 	#print "Element", k, ":", UML.Element._hash[k]().__dict__
-        cnt += 1
     #else:
         #print "No elements in hash."
 
@@ -29,7 +26,9 @@ print_hash()
 assert (cnt == 2)
 
 print "Deleting created items:"
+item.get_subject().unlink()
 del item
+dia.unlink ()
 del dia
 print_hash()
 assert (cnt == 0)
@@ -45,8 +44,13 @@ print_hash()
 assert (cnt == 2)
 
 print "Deleting created items:"
+dia.unlink()
+item.get_subject().unlink()
 del dia
-del item # Unreffing this one will cause a core dump
+print 'Unref\'ing this one will cause a core dump'
+del item
+print 'Hmmm... That seems not to be the problem'
 print_hash()
+print 'And not the assertion...'
 assert (cnt == 0)
-
+print 'OK'
