@@ -1,5 +1,12 @@
 2002-01-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
 
+	* gaphor/UML/Element.py: Added unlink() method. This should be called
+	  before the object is destroyed.
+	* gaphor/diagram/usecase.c: Added use_case_handle_motion(), so
+	  text will remain centered even if the box is resized.
+
+2002-01-26  Arjan Molenaar  <arjanmolenaar@hetnet.nl>
+
 	* gaphor/UML/Element.py: Added signals
 	* gaphor/diagram/classifier.[ch],
 	  gaphor/diagram/relationship.[ch],
